[package]
name = "account-utils"
version = "0.1.0"
description = "Account management utilities for Solana programs"
edition = "2021"

[dependencies]
# Path dependencies - crypto-primitives is ONLY used by account-utils
crypto-primitives = { path = "../crypto-primitives" }
common = { path = "../common" }
solana-program = { workspace = true }
thiserror = { workspace = true }
borsh = { workspace = true } 