[package]
name = "crypto-primitives"
version = "0.1.0"
description = "Cryptographic primitives for Solana account operations (used only by account-utils)"
edition = "2021"

[dependencies]
# Path dependency on our common library
common = { path = "../common" }
solana-program = { workspace = true }
thiserror = { workspace = true }
borsh = { workspace = true } 