[package]
name = "math-primitives"
version = "0.1.0"
description = "Primitive mathematical operations and constants for Solana programs"
edition = "2021"

[dependencies]
# Path dependency on our common library
common = { path = "../common" }
solana-program = { workspace = true }
thiserror = { workspace = true }
borsh = { workspace = true } 